# latex2sympy

./: .coveragerc  .flake8  .gitignore  CMakeLists.txt  LATEX.g4  PS.g4  README.md  __init__.py  dev-requirements.in  dev-requirements.txt  latex2antlr2pyTest.py  latex2antlrJsonTest.py  latex2sympy.py  latex2sympy2.py  latex2sympy2Test.py  latex2sympyTest.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  test.py  test_basic.py
cmake/: ExternalAntlr4Cpp.cmake  README.md
latex2sympy/: latex2sympy.py  latex2sympy2.py
latex2sympy/parser/cpp/: CMakeLists.txt  LATEXParser.cpp  LATEXParser.h
latex2sympy/parser/python/: LATEXLexer.interp
parser/cpp/: CMakeLists.txt  LATEX.interp  LATEXBaseListener.cpp  LATEXBaseListener.h  LATEXLexer.h  LATEXListener.cpp  LATEXListener.h  LATEXParser.cpp  LATEXParser.h  conanfile.txt  latex2antlr.cpp  latex2antlrJSON.cpp  latex2antlrJson.cpp  parse.cpp
parser/python/: LATEX.interp  LATEXLexer.py  LATEXLexer.tokens  LATEXListener.py  LATEXParser.py
sandbox/: linalg_equations.py  matrix.py  matrix_placeholders.py  sandbox.py  sandbox_complex_infinity.py  sandbox_complex_math.py  sandbox_equality.py  sandbox_si_units.py  sandbox_units.py  sandbox_units_suffixes.py  sandbox_unknown_functions.py  sectan.py  vector.py
scripts/: compile.sh  coverage-ci.sh  coverage.sh  pre-commit  pre-push  setup.sh  test.sh
src/latex2sympy/: latex2antlrJson.cpp  latex2sympy.py  latex2sympy2.py  latex2sympyAsUnit.py
src/latex2sympy/definitions/: units.py
src/latex2sympy/lib/: __init__.py
src/latex2sympy/parser/cpp/: LATEX.tokens  LATEXLexer.cpp  latex2antlrJson.cpp
src/latex2sympy/parser/python/: LATEX.interp  LATEXParser.py
src/latex2sympy/units/: __init__.py  additional_units.py  aliases.py  dimensions.py  prefixed_unit_definitions.py  prefixes.py  sie.py  unit_aliases.json  unit_aliases.py  unit_definitions.py  units.py  utils.py
src/latex2sympy/units/unit_aliases/: __init__.py  unit_aliases.json  unit_aliases.pkl  unit_aliases.py
src/latex2sympy/utils/: differential.py  expression.py  json.py  units.py
tests/: abs_test.py  all_bad_test.py  all_good_test.py  atom_expr_test.py  binomial_test.py  ceil_test.py  complex_test.py  context.py  epsilon_test.py  exp_test.py  floor_test.py  gcd_test.py  grammar_build_test.py  greek_test.py  grouping_test.py  lcm_test.py  left_right_cdot_test.py  linalg_test.py  max_test.py  min_test.py  mod_test.py  overline_test.py  pi_test.py  style_test.py  symbol_test.py  trig_test.py  unit_test.py  variable_test.py
